--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
     
     <!-- زر التبديل للكود الكامل -->
     <div class="toggle-container">
-        <span class="toggle-label" onclick="document.getElementById('fullCmdMode').click()">تفعيل الكود الكامل (للحاسوب)</span>
+        <span class="toggle-label" onclick="document.getElementById('fullCmdMode').click()">إظهار الكود الكامل (لبعض التطبيقات)</span>
         <label class="switch">
             <input type="checkbox" id="fullCmdMode" onchange="toggleFullMode()">
             <span class="slider"></span>
